<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mindfulBrown_20"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- 첫 번째 텍스트뷰 -->

    <!-- 두 번째 텍스트뷰 -->

    <!-- 세 번째 텍스트뷰 -->
    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/mindfulBrown_20"
        android:text="@string/back"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="10dp"
        android:text="@string/QUiz"
        android:textColor="@color/mindfulBrown_80"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <!-- 네 번째 텍스트뷰 -->

    <!-- 이미지뷰 -->

    <!-- 버튼 -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/zz"
        android:textColor="@color/mindfulBrown_80"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="120dp"
        android:text="@string/cv"
        android:textColor="@color/mindfulBrown_80"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="10dp"
        android:text="@string/study"
        android:textColor="@color/mindfulBrown_80"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="308dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/img" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="550dp"
        android:backgroundTint="@color/green_50"
        android:text="@string/start"
        android:textColor="@color/mindfulBrown_80"
        android:textStyle="bold" />


</RelativeLayout>
