<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/mindfulBrown_10"
    android:padding="16dp"
    tools:context=".Quiz3">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="@color/mindfulBrown_80"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:max="5"
            android:progress="0" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/count_label"
            android:textColor="@color/mindfulBrown_80"
            android:textSize="20sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/stage1option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:background="@drawable/option_background"
        android:gravity="center"
        android:text="선택지 1"
        android:textColor="@color/mindfulBrown_80"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/stage1option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:background="@drawable/option_background"
        android:gravity="center"
        android:text="선택지 2"
        android:textColor="@color/mindfulBrown_80"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/stage1option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:background="@drawable/option_background"
        android:gravity="center"
        android:text="선택지 3"
        android:textColor="@color/mindfulBrown_80"
        android:textStyle="bold"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_50"
        android:layout_weight="0.5"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textColor="@color/mindfulBrown_80"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
